[4.0][a11y] Fix 'High Contrast' option - currently inverts (#27143)

--- a/administrator/templates/atum/scss/blocks/_global.scss
+++ b/administrator/templates/atum/scss/blocks/_global.scss
@@ -18,7 +18,7 @@ body {
     filter: grayscale(1);
   }
   &.a11y_contrast {
-    filter: invert(100%);
+    filter: contrast(115%);
   }
   &.a11y_highlight {
     a {
